fixed dark mode transition on canvas. Also cleaned up a a lot of the particle code

--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,7 @@
 @import "tailwindcss";
 
 @custom-variant dark (&:where(.dark, .dark *));
+
+* {
+    @apply transition-colors duration-300;
+}
